--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Rubrik</h1>
+
+    <input type="text">
+
+    <section>
+        <div id="productList"></div>
+    </section>
     
 </body>
 </html>
